--- a/css/main.css
+++ b/css/main.css
@@ -42,4 +42,29 @@ button[type="reset"] {
     color: #2c3e50;
 }
 
+/*formulaire html */
 
+form ul.form{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+form ul.form li{
+    margin-bottom: 1.5em;
+
+}
+
+form label{
+    display: block;
+    margin-bottom: 0.5em;
+    font-weight: bold;
+    cursor: pointer;
+
+}
+
+input{
+    padding: 1em;
+    border: 2px solid #2c3e50;
+    background-color: white;
+}
