--- a/css/main.css
+++ b/css/main.css
@@ -68,5 +68,7 @@ input{
     border: 2px solid #2c3e50;
     background-color: white;
     font-family: inherit;
+    color: inherit;
+    font-size: inherit;
 
 }
