--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,14 @@ button[type="reset"] {
 }
 
 /*formulaire html */
+form{
+    padding: 20px;
+    margin: 2em auto 80px;
+    background-color: rgba(255,255,255,.8);
+    border: 6px solid   #2c3e50;
+    max-width: 450px;
+    min-width: 300px;
+}
 
 form ul.form{
     list-style: none;
@@ -64,11 +72,13 @@ form label{
 }
 
 input{
+    width: 100%;
     padding: 1em;
     border: 2px solid #2c3e50;
     background-color: white;
     font-family: inherit;
     color: inherit;
     font-size: inherit;
+
 
 }
