ajout des boutons radio

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ form label{
 
 }
 
-input{
+ form input,form select{
     width: 100%;
     padding: 1em;
     border: 2px solid #2c3e50;
@@ -81,3 +81,4 @@ input{
     font-size: inherit;
 
 }
+
