--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,17 @@ form label input{
     width: auto;
 }
 
+form fieldset{
+    padding: 1em;
+    border:2px solid     #2c3e50;
+}
+
+form fieldset label{
+    display: inline-block;
+    margin-right: 1em;
+
+}
+
  form input,form select{
     width: 100%;
     padding: 1em;
