bouton rester connecté

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,11 @@ form fieldset{
     border:2px solid     #2c3e50;
 }
 
+form fieldset legend{
+    font-weight: bold;
+    padding: 0  .5em;
+}
+
 form fieldset label{
     display: inline-block;
     margin-right: 1em;
